--- a/Split It!/Split It!.csproj
+++ b/Split It!/Split It!.csproj
@@ -100,6 +100,8 @@
     <Compile Include="Model\Notifications.cs" />
     <Compile Include="Model\Picture.cs" />
     <Compile Include="Model\User.cs" />
+    <Compile Include="Request\BaseRequest.cs" />
+    <Compile Include="Request\GetUserRequest.cs" />
     <Compile Include="Request\CurrentUserRequest.cs" />
     <Compile Include="WelcomePage.xaml.cs">
       <DependentUpon>WelcomePage.xaml</DependentUpon>
