--- a/Split It!/Split It!.csproj
+++ b/Split It!/Split It!.csproj
@@ -100,14 +100,16 @@
       <DependentUpon>Login.xaml</DependentUpon>
     </Compile>
     <Compile Include="Model\Category.cs" />
-    <Compile Include="Model\Debt.cs" />
+    <Compile Include="Model\Balance_User.cs" />
+    <Compile Include="Model\Debt_Group.cs" />
+    <Compile Include="Model\Debt_Expense.cs" />
     <Compile Include="Model\Expense.cs" />
     <Compile Include="Model\Group.cs" />
     <Compile Include="Model\Notifications.cs" />
     <Compile Include="Model\Picture.cs" />
     <Compile Include="Model\User.cs" />
     <Compile Include="Request\BaseRequest.cs" />
-    <Compile Include="Request\GetFriends.cs" />
+    <Compile Include="Request\GetFriendsRequest.cs" />
     <Compile Include="Request\GetUserRequest.cs" />
     <Compile Include="Request\CurrentUserRequest.cs" />
     <Compile Include="SQLite.cs" />
