--- a/Split It!/Split It!.csproj
+++ b/Split It!/Split It!.csproj
@@ -157,7 +157,9 @@
     <None Include="Properties\WMAppManifest.xml">
       <SubType>Designer</SubType>
     </None>
-    <Content Include="splitwise.sqlite" />
+    <Content Include="splitwise.sqlite">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <Content Include="Assets\AlignmentGrid.png" />
