show profile picture

--- a/Split It!/Split It!.csproj
+++ b/Split It!/Split It!.csproj
@@ -158,6 +158,7 @@
     <None Include="Properties\WMAppManifest.xml">
       <SubType>Designer</SubType>
     </None>
+    <Content Include="Assets\Images\profilePhoto.png" />
     <Content Include="splitwise.sqlite">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
