--- a/Split It!/Split It!.csproj
+++ b/Split It!/Split It!.csproj
@@ -96,6 +96,7 @@
     </Compile>
     <Compile Include="Controller\QueryDatabase.cs" />
     <Compile Include="Controller\SyncDatabase.cs" />
+    <Compile Include="Converter\CacheImageFileConverter.cs" />
     <Compile Include="LocalizedStrings.cs" />
     <Compile Include="Login.xaml.cs">
       <DependentUpon>Login.xaml</DependentUpon>
