expense amount, color, visibility and word wrap

--- a/Split_It/Split_It.csproj
+++ b/Split_It/Split_It.csproj
@@ -102,6 +102,9 @@
     <Compile Include="Converter\BalanceToColorConverter.cs" />
     <Compile Include="Converter\BalanceToVisibilityConverter.cs" />
     <Compile Include="Converter\BoolToVisibilityConverter.cs" />
+    <Compile Include="Converter\ExpenseShareToAmountConverter.cs" />
+    <Compile Include="Converter\ExpenseShareToColorConverter.cs" />
+    <Compile Include="Converter\ExpenseShareToDescriptionConverter.cs" />
     <Compile Include="Converter\PaymentImageFileConverter.cs" />
     <Compile Include="LocalizedStrings.cs" />
     <Compile Include="Login.xaml.cs">
