--- a/Split_It/packages.config
+++ b/Split_It/packages.config
@@ -3,4 +3,5 @@
   <package id="RestSharp" version="104.4.0" targetFramework="wp80" />
   <package id="sqlite-net" version="1.0.8" targetFramework="wp80" />
   <package id="sqlite-net-wp8" version="3.8.4.3" targetFramework="wp80" />
+  <package id="WPtoolkit" version="4.2013.08.16" targetFramework="wp80" />
 </packages>
