--- a/Split_It/Split_It.csproj
+++ b/Split_It/Split_It.csproj
@@ -108,6 +108,9 @@
     <Compile Include="Converter\ExpenseShareToColorConverter.cs" />
     <Compile Include="Converter\ExpenseShareToDescriptionConverter.cs" />
     <Compile Include="Converter\PaymentImageFileConverter.cs" />
+    <Compile Include="ExpenseDetail.xaml.cs">
+      <DependentUpon>ExpenseDetail.xaml</DependentUpon>
+    </Compile>
     <Compile Include="LocalizedStrings.cs" />
     <Compile Include="Login.xaml.cs">
       <DependentUpon>Login.xaml</DependentUpon>
@@ -154,6 +157,10 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </ApplicationDefinition>
+    <Page Include="ExpenseDetail.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Login.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
