--- a/Split_It/Split_It.csproj
+++ b/Split_It/Split_It.csproj
@@ -102,6 +102,7 @@
     <Compile Include="Converter\BalanceToColorConverter.cs" />
     <Compile Include="Converter\BalanceToVisibilityConverter.cs" />
     <Compile Include="Converter\BoolToVisibilityConverter.cs" />
+    <Compile Include="Converter\ExpenseToDateConverter.cs" />
     <Compile Include="Converter\ExpenseToTitleConverter.cs" />
     <Compile Include="Converter\ExpenseShareToWhoPaidConverter.cs" />
     <Compile Include="Converter\ExpenseShareToAmountConverter.cs" />
