--- a/Split_It/packages.config
+++ b/Split_It/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Crittercism" version="2.0.0" targetFramework="wp80" />
+  <package id="Newtonsoft.Json" version="4.5.11" targetFramework="wp80" />
   <package id="RestSharp" version="104.4.0" targetFramework="wp80" />
   <package id="sqlite-net" version="1.0.8" targetFramework="wp80" />
   <package id="sqlite-net-wp8" version="3.8.4.3" targetFramework="wp80" />
