show splash screen and sync data in splash screen

--- a/Split_It/Split_It.csproj
+++ b/Split_It/Split_It.csproj
@@ -138,6 +138,9 @@
     <Compile Include="Request\GetFriendsRequest.cs" />
     <Compile Include="Request\GetUserRequest.cs" />
     <Compile Include="Request\CurrentUserRequest.cs" />
+    <Compile Include="SplashPage.xaml.cs">
+      <DependentUpon>SplashPage.xaml</DependentUpon>
+    </Compile>
     <Compile Include="SQLite.cs" />
     <Compile Include="SQLiteAsync.cs" />
     <Compile Include="UserDetails.xaml.cs">
@@ -170,6 +173,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="MainPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="SplashPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
