--- a/Split_It/Split_It.csproj
+++ b/Split_It/Split_It.csproj
@@ -151,6 +151,7 @@
     <Compile Include="Model\Picture.cs" />
     <Compile Include="Model\User.cs" />
     <Compile Include="Request\BaseRequest.cs" />
+    <Compile Include="Request\RecordPaymentRequest.cs" />
     <Compile Include="Request\DeleteExpenseRequest.cs" />
     <Compile Include="Request\GetExpensesRequest.cs" />
     <Compile Include="Request\GetGroupsRequest.cs" />
