--- a/Split_It/Split_It.csproj
+++ b/Split_It/Split_It.csproj
@@ -97,6 +97,9 @@
     <Compile Include="Add_Expense_Pages\AddPayment.xaml.cs">
       <DependentUpon>AddPayment.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Add_Expense_Pages\SplitUnequally.xaml.cs">
+      <DependentUpon>SplitUnequally.xaml</DependentUpon>
+    </Compile>
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
@@ -196,6 +199,9 @@
     <Page Include="Add_Expense_Pages\AddPayment.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Add_Expense_Pages\SplitUnequally.xaml">
+      <SubType>Designer</SubType>
     </Page>
     <Page Include="ExpenseDetail.xaml">
       <SubType>Designer</SubType>
