change add expense layout to a user control to reuse for edit expense

--- a/Split_It/Split_It.csproj
+++ b/Split_It/Split_It.csproj
@@ -97,6 +97,9 @@
     <Compile Include="Add_Expense_Pages\AddPayment.xaml.cs">
       <DependentUpon>AddPayment.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Add_Expense_Pages\ExpenseUserControl.xaml.cs">
+      <DependentUpon>ExpenseUserControl.xaml</DependentUpon>
+    </Compile>
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
@@ -197,6 +200,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Add_Expense_Pages\AddPayment.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Add_Expense_Pages\ExpenseUserControl.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
