--- a/Split_It/Split_It.csproj
+++ b/Split_It/Split_It.csproj
@@ -121,6 +121,9 @@
     <Compile Include="CreateFriend.xaml.cs">
       <DependentUpon>CreateFriend.xaml</DependentUpon>
     </Compile>
+    <Compile Include="CreateGroup.xaml.cs">
+      <DependentUpon>CreateGroup.xaml</DependentUpon>
+    </Compile>
     <Compile Include="ExpandableListHelper\AllDebtColorConverter.cs" />
     <Compile Include="ExpandableListHelper\AllDebtAmountConverter.cs" />
     <Compile Include="ExpandableListHelper\AllDebtTextConverter.cs" />
@@ -169,6 +172,7 @@
     <Compile Include="Model\User.cs" />
     <Compile Include="Request\BaseRequest.cs" />
     <Compile Include="Request\AddExpenseRequest.cs" />
+    <Compile Include="Request\CreateGroupRequest.cs" />
     <Compile Include="Request\CreateFriendRequest.cs" />
     <Compile Include="Request\UpdateExpenseRequest.cs" />
     <Compile Include="Request\GetCurrenciesRequest.cs" />
@@ -220,6 +224,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="CreateFriend.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="CreateGroup.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
