--- a/Split_It/packages.config
+++ b/Split_It/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AdDuplexWP8" version="2.8.0.8" targetFramework="wp80" />
   <package id="Crittercism" version="2.0.0" targetFramework="wp80" />
   <package id="Newtonsoft.Json" version="4.5.11" targetFramework="wp80" />
   <package id="RestSharp" version="104.4.0" targetFramework="wp80" />
